*SVN*

*0.0.1* (September 22nd, 2007)

* Move test fixtures out of the test application root directory

* Improve documentation

* Remove the StateExtension module in favor of adding singleton methods to the stateful class

* Convert dos newlines to unix newlines

* Fix error message when a given event can't be found in the database

* Add before_#{action} and #{action} callbacks when an event is performed

* All state and event callbacks can now explicitly return false in order to cancel the action

* Refactor ActiveState callback creation

* Refactor unit tests so that they use mock classes instead of themselves

* Allow force_reload option to be set in the state association

* Don't save the entire model when updating the state_id

* Raise exception if a class tries to define a state more than once

* Add tests for PluginAWeek::Has::States::ActiveState

* Refactor active state/active event creation

* Fix owner_type not being set correctly in active states/events of subclasses

* Allow subclasses to override the initial state

* Fix problem with migrations using default null when column cannot be null

* Moved deadline support into a separate plugin (has_state_deadlines).

* Added many more unit tests.

* Simplified many of the interfaces for maintainability.

* Added support for turning off recording state changes.

* Removed the short_description and long_description columns, in favor of an optional human_name column.

* Fixed not overriding the correct equality methods in the StateTransition class.

* Added to_sym to State and Event.

* State#name and Event#name now return the string version of the name instead of the symbol version.

* Added State#human_name and Event#human_name to automatically figure out what the human name is if it isn't specified in the table.

* Updated manual rollbacks to use the new Rails edge api (ActiveRecord::Rollback exception).

* Moved StateExtension class into a separate file in order to help keep the has_state files clean.
