@@ -92,13 +92,7 @@ module PluginAWeek #:nodoc:
         def add_callbacks
           [:before_enter, :after_enter, :before_exit, :after_exit].each do |type|
             callback = "#{type}_#{name}"
-            @owner_class.class_eval <<-end_eval
-              def self.#{callback}(*callbacks, &block)
-                callbacks << block if block_given?
-                write_inheritable_array(:#{callback}, callbacks)
-              end
-            end_eval
-            
+            @owner_class.callback(callback)
             @owner_class.send(callback, @options[type]) if @options[type]
           end
         end
