@@ -1,5 +1,6 @@
 # Load local repository plugin paths
 $:.unshift("#{File.dirname(__FILE__)}/../../../associations/class_associations/lib")
+$:.unshift("#{File.dirname(__FILE__)}/../../../miscellaneous/custom_callbacks/lib")
 $:.unshift("#{File.dirname(__FILE__)}/../../../miscellaneous/dry_transaction_rollbacks/lib")
 $:.unshift("#{File.dirname(__FILE__)}/../../../../ruby/object/eval_call/lib")
 
