@@ -1,5 +1,7 @@
 *SVN*
 
+* Add dependency on custom_callbacks
+
 *0.0.1* (September 22nd, 2007)
 
 * Move test fixtures out of the test application root directory
